[package]
name = "sysinfo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.56.0", features = ["Win32_System_SystemInformation", "Win32_System_WindowsProgramming", "Win32_Security_Authentication_Identity", "Win32_System_ProcessStatus", "Win32_System_Com"] }
